--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="mr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>माझं पहिलं वेबपेज</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ultra Professional Webpage</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>नमस्कार!</h1>
-    <p>हे माझं पहिलं HTML + CSS वेबपेज आहे.</p>
-  </header>
+  <div class="glass-card">
+    <h1>Welcome to My 3D World</h1>
+    <p>This is an ultra-professional webpage with 3D integration using Three.js.</p>
+  </div>
 
-  <main>
-    <p>मी हे GitHub वर होस्ट करणार आहे.</p>
-  </main>
+  <!-- 3D Canvas -->
+  <div id="three-container"></div>
 
-  <footer>
-    <p>&copy; 2025 माझं नाव</p>
-  </footer>
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="3d.js"></script>
 </body>
 </html>
